tests/invalid/list_unknown_method_call/main.py
def run_case() -> None:
    xs: list[int] = [1, 2]
    xs.nope()


if __name__ == "__main__":
    run_case()
